--- a/MindWell/app/build.gradle
+++ b/MindWell/app/build.gradle
@@ -32,6 +32,9 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.firebaseui:firebase-ui-database:8.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    implementation 'com.firebaseui:firebase-ui-database:6.2.0'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth-ktx:21.2.0'
