--- a/MindWell/app/src/main/AndroidManifest.xml
+++ b/MindWell/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".Home"
+            android:name=".Survey"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
