--- a/MindWell/app/src/main/AndroidManifest.xml
+++ b/MindWell/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".splashscreen"
+            android:screenOrientation="portrait"
             android:exported="true">
 
             <intent-filter>
@@ -27,6 +28,7 @@
         </activity>
         <activity
             android:name=".Login"
+            android:screenOrientation="portrait"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -34,6 +36,7 @@
         </activity>
         <activity
             android:name=".Survey"
+            android:screenOrientation="portrait"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -41,6 +44,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
